--- a/Codenames/Shared/MainLayout.razor
+++ b/Codenames/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a @onclick="() => Codenames.Data.WordService.CreateGame()" href="/game/0" target="_blank">Create Game</a>
+        <a href="/createGame">Create Game</a>
     </div>
 
     <div class="content px-4">
