--- a/Codenames/Shared/MainLayout.razor
+++ b/Codenames/Shared/MainLayout.razor
@@ -2,6 +2,7 @@
 
 <div class="main">
     <div class="top-row px-4">
+        <a href="/">Home</a>
         <a href="/createGame">Create Game</a>
     </div>
 
