--- a/Codenames/Pages/_Host.cshtml
+++ b/Codenames/Pages/_Host.cshtml
@@ -31,5 +31,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.server.js"></script>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/game.js"></script>
 </body>
 </html>
