--- a/Codenames/wwwroot/css/site.css
+++ b/Codenames/wwwroot/css/site.css
@@ -200,10 +200,12 @@ app {
 
 .red {
     background-color: red;
+    color: white
 }
 
 .neutral {
     background-color: yellow;
+    color: black;
 }
 
 .assassin {
