--- a/Codenames/Pages/GamePage.razor
+++ b/Codenames/Pages/GamePage.razor
@@ -16,15 +16,25 @@
         <button type="button" class="btn btn-primary assassin" onclick="leaveGame()">Leave Game</button>
     </div>
     <br/>
-    <div class="grid-container">
-        @foreach (var item in game.Words)
-        {
-            var tmpWord = item;
+    <div class="row">
+        <div class="col-sm chat-column">
+            <ChatControl id="red-chat">Red Chat</ChatControl>
+        </div>
+        <div class="col-md">
+            <div class="grid-container">
+                @foreach (var item in game.Words)
+                {
+                    var tmpWord = item;
 
-            <div class="grid-item @item.word @(game.IsOver || item.isGuessed ? item.state.ToString().ToLower() : "")" @onclick="() => _wordService.MarkAsClicked(game, tmpWord.word)">
-                @item.word
+                    <div class="grid-item @item.word @(game.IsOver || item.isGuessed ? item.state.ToString().ToLower() : "")" @onclick="() => _wordService.MarkAsClicked(game, tmpWord.word)">
+                        @item.word
+                    </div>
+                }
             </div>
-        }
+        </div>
+        <div class="col-sm chat-column">
+            <ChatControl id="blue-chat">Blue Chat</ChatControl>
+        </div>
     </div>
 }
 
