--- a/Codenames/Pages/_Host.cshtml
+++ b/Codenames/Pages/_Host.cshtml
@@ -13,6 +13,7 @@
     <title>Codenames</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -32,6 +33,7 @@
     </div>
     <script src="_framework/blazor.server.js"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/jquery/jquery.js"></script>
     <script src="~/js/game.js"></script>
 </body>
 </html>
