--- a/Codenames/Pages/GamePage.razor
+++ b/Codenames/Pages/GamePage.razor
@@ -1,30 +1,33 @@
 ﻿@page "/game/{Id}"
 
 @using Codenames.Data;
+@using Microsoft.AspNetCore.Http;
+
 @inject WordService _wordService
+@inject IHttpContextAccessor _contextAccessor
 
 @if (game == null)
 {
-     game = _wordService.GetGame(int.Parse(Id));
+    game = _wordService.GetGame(int.Parse(Id));
 }
 @if (game != null)
 {
+    int? userId = _contextAccessor.HttpContext.Request.Cookies.ContainsKey("userid")
+        ? (int?)int.Parse(_contextAccessor.HttpContext.Request.Cookies["userid"])
+        : null;
+
+    var showJoin = !game.Players.Any(a => a.playerId == userId);
+    var showRedSmJoin = !game.Players.Any(a => a.isSpyMaster && a.team == Team.Red);
+    var showBlueSmJoin = !game.Players.Any(a => a.isSpyMaster && a.team == Team.Blue);
+    var showLeave = game.Players.Any(a => a.playerId == userId);
+
     <div>
-        <button type="button" class="join btn btn-primary neutral" onclick="joinGame()">Join Game</button>
-
-        @if (!game.Players.Any(a => a.isSpyMaster && a.team == Team.Red))
-        {
-            <button type="button" class="sm-join btn btn-primary red" onclick="joinGameAsSm(0)">Join Game as Red SM</button>
-        }
-        @if (!game.Players.Any(a => a.isSpyMaster && a.team == Team.Blue))
-        {
-            <button type="button" class="sm-join btn btn-primary blue" onclick="joinGameAsSm(1)">Join Game as Blue SM</button>
-        }
-
-        <button type="button" class="leave btn btn-primary assassin" onclick="leaveGame()">Leave Game</button>
+        <button type="button" class="join btn btn-primary neutral @(showJoin ? "" : "hide")" onclick="joinGame()">Join Game</button>
+        <button type="button" class="sm-join btn btn-primary red @(showRedSmJoin ? "" : "hide")" onclick="joinGameAsSm(0)">Join Game as Red SM</button>
+        <button type="button" class="sm-join btn btn-primary blue @(showBlueSmJoin ? "" : "hide")" onclick="joinGameAsSm(1)">Join Game as Blue SM</button>
+        <button type="button" class="leave btn btn-primary assassin @(showLeave ? "" : "hide")" onclick="leaveGame()">Leave Game</button>
     </div>
-    <br/>
-    <br/>
+    <br />
     <div class="row">
         <div class="col-sm chat-column">
             <ChatControl id="red-chat">Red Chat</ChatControl>
