Fix layout on different screen sizes

--- a/Codenames/Pages/GamePage.razor
+++ b/Codenames/Pages/GamePage.razor
@@ -29,13 +29,13 @@
     </div>
     <br />
     <div class="row">
-        <div class="col-sm-8 order-1">
+        <div class="col-lg order-lg-1">
             <WordGridControl game="game"></WordGridControl>
         </div>
-        <div class="col-sm-2 chat-column order-0">
+        <div class="col-sm chat-column red-chat-column order-lg-0">
             <ChatControl id="red-chat">Red Chat</ChatControl>
         </div>
-        <div class="col-sm-2 chat-column order-2">
+        <div class="col-sm chat-column blue-chat-column order-2">
             <ChatControl id="blue-chat">Blue Chat</ChatControl>
         </div>
     </div>
