--- a/Codenames/wwwroot/css/site.css
+++ b/Codenames/wwwroot/css/site.css
@@ -73,6 +73,8 @@ app {
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
+    margin-right: -15px;
+    margin-left: -15px;
 }
 
 .grid-item {
@@ -105,7 +107,7 @@ app {
     font-weight: bold;
 }
 
-.chat-column {
+.chat {
     background: whitesmoke;
     border-radius: 4px;
     border: 1px solid grey;
@@ -118,7 +120,7 @@ app {
 }
 
 .chat .chat-form {
-    padding: 5px;
+    margin: -1px;
 }
 
 .chat-send {
@@ -150,7 +152,7 @@ app {
         margin-left: 2px;
     }
 
-    .row .chat-column {
+    .row .col-sm {
         margin-top: 5px;
         margin-bottom: 5px;
     }
@@ -166,4 +168,8 @@ app {
         margin-top: 2px;
         margin-bottom: 5px;
     }
+}
+
+.button-row, .sm-inputs, .sm-clue {
+    margin-bottom: 15px;
 }
